[package]
name = "channel-signal"
version = "0.1.0"
edition = "2024"
# channel-signal links against presage, which is AGPL-3.0. The combined
# binary is therefore distributed under AGPL-3.0.
license = "AGPL-3.0"
description = "Dispatch channel plugin for Signal via native Rust presage client."
repository = "https://github.com/serenorg/dispatch-channel-signal"
keywords = ["dispatch", "channel", "signal", "agents"]
categories = ["command-line-utilities"]

# libsignal's zkgroup/poksho stack requires Signal Foundation's fork of
# curve25519-dalek for the post-quantum ristretto primitives it relies
# on. This patch unifies every consumer in the dep graph (presage,
# libsignal-service, zkgroup) on that fork.
[patch.crates-io]
curve25519-dalek = { git = "https://github.com/signalapp/curve25519-dalek", tag = "signal-curve25519-4.1.3" }

[[bin]]
name = "channel-signal"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
dispatch-channel-protocol = { git = "https://github.com/serenorg/dispatch", tag = "v0.3.0" }
futures = "0.3"
jiff = "0.2"
libsqlite3-sys = { version = "0.36", default-features = false, features = ["bundled-sqlcipher-vendored-openssl"] }
presage = { git = "https://github.com/whisperfish/presage", branch = "main" }
presage-store-sqlite = { git = "https://github.com/whisperfish/presage", branch = "main", default-features = false }
qrcode = { version = "0.14", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
url = "2"
